--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: snemoto <snemoto@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/30 19:23:56 by snemoto           #+#    #+#              #
-#    Updated: 2023/09/25 18:00:26 by snemoto          ###   ########.fr        #
+#    Updated: 2023/12/17 13:33:30 by snemoto          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,15 +14,15 @@
 # Variables																	   #
 # **************************************************************************** #
 
-NAME	= megaphone
+NAME	= bureaucrat
 SRCS	= $(shell echo *.cpp)
 OBJDIR	= obj/
-OBJS	= $(SRCS:%.c=$(OBJDIR)%.o)
+OBJS	= $(addprefix $(OBJDIR),$(SRCS:.cpp=.o)) 
 
-CC		= c++
-CFLAGS	= -Wall -Wextra -Werror -std=c++98 -pedantic
-RM		= rm -f
-RMD		= rm -rf
+CXX			= c++
+CXXFLAGS	= -Wall -Wextra -Werror -std=c++98 -pedantic
+RM			= rm -f
+RMD			= rm -rf
 
 # **************************************************************************** #
 # General Rules																   #
@@ -33,11 +33,11 @@ all:	$(OBJDIR) $(NAME)
 $(OBJDIR):
 		mkdir -p obj
 
-$(OBJDIR)%.o: %.c
-		$(CC) $(CFLAGS) -c -o $@ $<
+$(OBJDIR)%.o: %.cpp
+		$(CXX) $(CXXFLAGS) -c -o $@ $<
 
 $(NAME): $(OBJS)
-		$(CC) $(CFLAGS) -o $(NAME) $(OBJS)
+		$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
 
 clean:
 		${RMD} $(OBJDIR)
